adiosai-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: adiosai-app
  name: adiosai-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: adiosai-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/rashid-devops-hometask-default: "true"
        io.kompose.service: adiosai-app
    spec:
      containers:
        - env:
            - name: AWS_ACCESS_KEY_ID
            - name: AWS_SECRET_ACCESS_KEY
            - name: REGION
            - name: S3_BUCKET
            - name: SQLALCHEMY_DATABASE_URI
          image: adiosai-app:latest
          name: adiosai-app
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
