adiosai-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: adiosai-app
  name: adiosai-app
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5000
  selector:
    io.kompose.service: adiosai-app
status:
  loadBalancer: {}
